removed parallax scrolling and fixed some spacing on connect landing page

--- a/sass/_responsive.scss
+++ b/sass/_responsive.scss
@@ -81,4 +81,7 @@
   .title {
     display: none;
   }
+  h1.vh.connect-heading {
+    margin-top: 0;
+  }
 }
