--- a/sass/_toolkit.scss
+++ b/sass/_toolkit.scss
@@ -52,6 +52,7 @@ a {
 .landing {
   height: 100vh;
   width: 100%;
+  overflow: hidden; 
 }
 
 //Font Variables
