--- a/style.css
+++ b/style.css
@@ -218,7 +218,10 @@
     max-width: 95%; }
 
   .title {
-    display: none; } }
+    display: none; }
+
+  h1.vh.connect-heading {
+    margin-top: 0; } }
 .landing.skills {
   flex-direction: column;
   align-items: center;
@@ -281,7 +284,8 @@ a {
 
 .landing {
   height: 100vh;
-  width: 100%; }
+  width: 100%;
+  overflow: hidden; }
 
 .about .about-header h1, .about .about-subheader p, .connect h1.connect-heading, .landing.intro .flex h1, .landing.intro .flex h2, .landing.intro .flex h3, .navigation-cta a, .projects h1.project-heading, .projects .project-wrapper, .projects .project-wrapper .project-header h1 a, .projects .project-card *, .skills-header h1, .skill ul li, .button {
   color: #FEFDFB; }
